Fix z-index for color picker. #627.

--- a/css/color.css
+++ b/css/color.css
@@ -10,4 +10,5 @@
 }
 .rwmb-color-wrapper .wp-picker-holder {
 	position: absolute;
+	z-index: 1;
 }
